Fixed horizontal scroll on home and opacity on trail arrows

--- a/wp-content/themes/argento/sass/modules/_trail.scss
+++ b/wp-content/themes/argento/sass/modules/_trail.scss
@@ -22,6 +22,9 @@
     transform:translateX(-50%);
     width:100%;
   }
+  .slick-list {
+    overflow: inherit;
+  }
   .slick-arrow {
     background:none;
     border:0;
